# watermelon-praxis

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEMO.md
praxis/: compactor.py  config.py  db.py  executor.py  llm.py  main.py  memory.py  metrics.py  models.py  operations.py  orchestrator.py  planner.py  recall.py  reporter.py  sandbox.py  seeding.py  synthesizer.py
praxis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
praxis/platform/: github.py
tests/: conftest.py  selfcheck.py  test_compactor.py  test_db.py  test_executor.py  test_github_offline.py  test_llm_offline.py  test_main_memory.py  test_memory.py  test_metrics.py  test_models.py  test_orchestrator.py  test_planner.py  test_recall.py  test_reporter.py  test_sandbox.py  test_seeding.py  test_skill_health.py  test_synthesizer.py
