[project]
name = "praxis"
version = "0.1.0"
description = "Autonomous Platform Intelligence Agent (GitHub)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
praxis = "praxis.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["praxis*"]
